force-app/main/default/objects/Hydrafacial_Treatment__c/Hydrafacial_Treatment__c.object-meta.xml
<CustomObject>
    <label>Hydrafacial  Treatment</label>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>Hydrafacial  Treatment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hydrafacial  Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>