force-app/main/default/objects/Hydrafacial_Treatment__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Hydrafacial  Treatments</relationshipLabel>
    <relationshipName>Hydrafacial_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>