force-app/main/default/objects/Hydrafacial_Treatment__c/fields/Cleanser__c.field-meta.xml
<CustomField>
    <fullName>Cleanser__c</fullName>
    <label>Cleanser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>