force-app/main/default/objects/Hydrafacial_Treatment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hydrafacial  Treatments</relationshipLabel>
    <relationshipName>Hydrafacial_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>