force-app/main/default/objects/Hydrafacial_Treatment__c/fields/Peel__c.field-meta.xml
<CustomField>
    <fullName>Peel__c</fullName>
    <label>Peel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>